Fixed bug #47217 (content-type is not set properly for file uploads)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_3@274636 c90b9560-bf6c-de11-be94-00142212c4b1